Return reviews for a given property

--- a/app/views/location/properties.html
+++ b/app/views/location/properties.html
@@ -1,7 +1,7 @@
 <ul>
   {{#properties}}
   <li>
-    <a href="http://www.tripadvisor.co.uk/{{href}}">{{title}}</a> : <a href="/property/{{id}}">Reviews</a>
+    <a href="http://tripadvisor.co.uk{{href}}">{{name}}</a> : <a href="/property/{{trip_id}}">Reviews</a>
   </li>
   {{/properties}}
 </ul>
